fix icon and map on mobile

--- a/custom.css
+++ b/custom.css
@@ -336,6 +336,15 @@ a.button:hover {
   }
 }
 
+.social-icon a {
+  display: block;
+}
+
+.social-icon svg {
+  width: 100%;
+  height: 100%;
+}
+
 .social-icon:hover {
   opacity: 0.8;
 }
@@ -457,6 +466,10 @@ a.button:hover {
 .find-us-map {
   width: 50%;
   height: 100%;
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+  }
 }
 
 .find-us-map img {
